# echodata

./: .gitignore  README.md  main.py  pyproject.toml
data/: imdb_results.csv  imdb_test.csv  imdb_train.csv  prima_diabetes_results.csv  prima_diabetes_test.csv  prima_diabetes_train.csv  test.csv  test_no_ans.csv  test_results.csv  train.csv
data/sklearn/: diabetes_predict.csv  diabetes_predict2.csv  diabetes_test.csv  diabetes_train.csv  wine_result.csv  wine_test.csv  wine_train.csv
models/: model_base.py  model_registry.py
models/tabfms/: __init__.py  autotabpfn_impl.py  mitra_impl.py  tabicl_impl.py  tabpfn_impl.py  tabstar_impl.py  tabularfm_protocol.py
tests/models/tabfms/: test_TabICLImpl.py  test_models.py
tests/resources/: generate_csv_data.py
ui/: simpleGradio.py
util/: data_handling.py  trainer.py
