[project]
name = "echodata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.44.1",
    "tabicl>=0.1.3",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"  # optional: concise output on failures

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
