[project]
name = "echodata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gradio>=4.44.1",
    "tabicl>=0.1.3",
    "tabpfn>=2.2.1",
    "tabpfn-extensions[post-hoc-ensembles]>=0.0.4",
    "tabstar>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"  # optional: concise output on failures

